--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer components {
+  .block {
+    @apply px-8 py-6 text-[20px]
+  }
+}
