--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  html {
+    font-family: Roboto, sans-serif;
+  }
+
+  body {
+    font-size: 18px;
+  }
+}
 
 @layer components {
   .block {
-    @apply px-8 py-6 text-[20px]
+    @apply px-8 py-6 text-[20px] 
+  }
+
+  /* .hamburger {
+    @apply w-[2rem] h-[2rem] relative
+  } */
+
+  .line {
+    @apply bg-black w-[100%] h-[3px] rounded duration-300
   }
 }
