--- a/src/index.css
+++ b/src/index.css
@@ -10,20 +10,28 @@
   }
 
   body {
-    font-size: 18px;
+    font-size: 20px;
   }
 }
 
 @layer components {
   .block {
-    @apply px-8 py-6 text-[20px] 
+    @apply px-8 pt-6 pb-12 text-center md:text-left
   }
 
-  /* .hamburger {
-    @apply w-[2rem] h-[2rem] relative
-  } */
+  .header {
+    @apply text-5xl font-bold mb-10
+  }
+
+  .heading {
+    @apply text-4xl font-bold mb-8
+  }
 
   .line {
     @apply bg-black w-[100%] h-[3px] rounded duration-300
+  }
+
+  .nav-link {
+    @apply after:bg-black after:h-[3px] after:absolute after:left-0 after:right-0 after:bottom-[-3px] after:rounded after:origin-left after:scale-x-0 after:duration-200 hover:after:scale-x-100
   }
 }
