--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
 
 @layer components {
   .block {
-    @apply px-8 pt-6 pb-12 text-center md:text-left
+    @apply px-8 py-12 text-center md:px-16 xl:px-24 md:text-left
   }
 
   .header {
