--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
 
 @layer components {
   .block {
-    @apply px-8 py-12  md:px-16 xl:px-24 
+    @apply px-6 py-12  md:px-16 xl:px-28 2xl:px-80
   }
 
   .header {
